--- a/style.css
+++ b/style.css
@@ -361,12 +361,15 @@ a:hover {
     position: relative;
     z-index: 2;
 }
+.acc-margin{
+    margin-right: 40px;
+}
 
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
         top: 50%;
-        right: 20px;
+        right: 200px;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
@@ -401,6 +404,8 @@ a:hover {
         float: none;
         margin: 10px auto 0;
     }
+
+
 }
 
 .nav > li > .dropdown a {
@@ -438,7 +443,10 @@ nav .caret {
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
+
+    
 }
+
 
 .mg-lg {
     margin-top: 10px;
@@ -1039,4 +1047,9 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+/*modif*/
+
+.adaptative{
+    font-size: 20px;
 }
