changement de couleurs

--- a/style.css
+++ b/style.css
@@ -769,7 +769,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #f3976c;
+  background-color: #3A7607;
 }
 
 .tc-white {
@@ -777,12 +777,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-  background: #f3976c;
+  background: #3A7607;
   color: #ffffff !important;
 }
 
 .btn-atomic-tangerine:hover {
-  background: #c27956 !important;
+  background: #3A7607 !important;
   color: #ffffff !important;
 }
 
@@ -795,7 +795,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-  color: #f3976c !important;
+  color: #3A7607 !important;
 }
 
 .ltc-atomic-tangerine:hover {
