--- a/style.css
+++ b/style.css
@@ -361,7 +361,6 @@ a:hover {
   z-index: 2;
 }
 
-
 @media (min-width: 768px) {
   .site-navigation {
     position: absolute;
@@ -769,7 +768,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #3A7607;
+  background-color: #3a7607;
 }
 
 .tc-white {
@@ -777,12 +776,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-  background: #3A7607;
+  background: #3a7607;
   color: #ffffff !important;
 }
 
 .btn-atomic-tangerine:hover {
-  background: #3A7607 !important;
+  background: #3a7607 !important;
   color: #ffffff !important;
 }
 
@@ -795,7 +794,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-  color: #3A7607 !important;
+  color: #3a7607 !important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -846,8 +845,6 @@ h4 {
   }
 }
 
-
-
 @media (max-width: 991px) {
   .container {
     width: 100%;
@@ -860,7 +857,7 @@ h4 {
     overflow-x: hidden;
     position: relative;
   }
-  
+
   .bloc-group,
   .bloc-group .bloc {
     display: block;
@@ -1030,10 +1027,12 @@ h4 {
 .adaptative-2 {
   font-size: 15px;
 }
-.h-adaptative{
+.h-adaptative {
   font-size: 10px;
 }
-
-.link-color{
-  color:white;
+.p-adaptative {
+  font-size: 14px;
+}
+.link-color {
+  color: white;
 }
